--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{include = "server"}]
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.11"
-fastapi = "^0.92.0"
+fastapi = "^0.100"
 uvicorn = "^0.20.0"
 openai = "^1.11.1"
 python-dotenv = "^0.21.1"
@@ -24,6 +24,7 @@ unidecode = "^1.3.8"
 fastapi-utils ="^0.7.0"
 diskcache = "^5.6.3"
 nodejs="^0.1.1"
+cog = "0.14.4"
 
 [tool.poetry.scripts]
 start = "server.main:start"
