--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ fastapi-utils ="^0.7.0"
 diskcache = "^5.6.3"
 nodejs="^0.1.1"
 cog = "0.14.4"
+black = "^25.1.0"
 
 [tool.poetry.scripts]
 start = "server.main:start"
