--- a/cog.yaml
+++ b/cog.yaml
@@ -1,6 +1,6 @@
 build:
   # set to true if your model requires a GPU
-  gpu: true
+  gpu: false
 
   # a list of ubuntu apt packages to install
   # system_packages:
