updated start server

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:diffbot-llm-inference]
-command=/bin/bash -c "cd /code && poetry run sh ./start_server.sh 2>&1 | tee -a /var/log/diffbot.log | cat";
+command=/bin/bash -c "sh ./start_server.sh 2>&1 | tee -a /var/log/diffbot.log | cat";
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
