--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{include = "server"}]
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.11"
-fastapi = "^0.100"
+fastapi = "0.115.0"
 uvicorn = "^0.20.0"
 openai = "^1.11.1"
 python-dotenv = "^0.21.1"
