--- a/cog.yaml
+++ b/cog.yaml
@@ -1,6 +1,6 @@
 build:
   # set to true if your model requires a GPU
-  gpu: false
+  gpu: true
 
   # a list of ubuntu apt packages to install
   system_packages:
