--- a/cog.yaml
+++ b/cog.yaml
@@ -5,6 +5,7 @@ build:
   # a list of ubuntu apt packages to install
   system_packages:
    - "supervisor"
+   - "libnvidia-gl-535"
   #   - "libgl1-mesa-glx"
   #   - "libglib2.0-0"
 
