--- a/vllm_cog/cog.yaml
+++ b/vllm_cog/cog.yaml
@@ -11,7 +11,7 @@ build:
 
   run:
     - --mount=type=cache,target=/root/.cache/pip TORCH_CUDA_ARCH_LIST="8.0;8.6;9.0" CUDA_HOME=/usr/local/cuda pip install --ignore-installed vllm==0.8.3
-    - --mount=type=cache,target=/root/.cache/pip pip install cog==0.10.0a18
+    - --mount=type=cache,target=/root/.cache/pip pip install cog==0.14.4
     - curl -o /usr/local/bin/pget -L "https://github.com/replicate/pget/releases/download/v0.8.2/pget_linux_x86_64" && chmod +x /usr/local/bin/pget
 
 predict: "predict.py:Predictor"
